--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "better-auth": "^1.3.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.6",
+    "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "pg": "^8.16.3",
