--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.6",
+    "embla-carousel-react": "^8.6.0",
     "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
