--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# user uploads (keep templates)
+/public/uploads/documents/
+
+# Google Cloud service account key
+gcs-service-account.json
+*-service-account.json
